[package]
name = "spectral"
version = "0.7.0"
authors = ["cfrancia <cfrancia@users.noreply.github.com>"]
license = "Apache-2.0"
description = "Fluent test assertions"
repository = "https://github.com/cfrancia/spectral"
readme = "README.md"
keywords = ["fluent", "testing", "matchers", "assert", "assertions"]

[features]
default = ["num"]

[dependencies]
num = { version = "0.4.1", optional = true }
